--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="centered-button">
-    <button>INICIO</button>
+    <button onclick="window.location.href='home.html'">INICIO</button>
   </div>
 </body>
 </html>
