Added background image for start page

--- a/start.html
+++ b/start.html
@@ -12,11 +12,11 @@
   <!-- This connects the file to the CSS file in order to take care of the styling -->
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="start-page">
   <!-- A container that will take care of centering the button -->
   <div class="centered-button">
     <!-- A button that says INICIO and when clicked redirects the user to home.html -->
-    <button onclick="window.location.href='home.html'">INICIO</button>
+    <button onclick="window.location.href='main.html'">INICIO</button>
   </div>
 </body>
 </html>
