Added background images

--- a/start.html
+++ b/start.html
@@ -16,7 +16,7 @@
   <!-- A container that will take care of centering the button -->
   <div class="centered-button">
     <!-- A button that says INICIO and when clicked redirects the user to home.html -->
-    <button onclick="window.location.href='main.html'">INICIO</button>
+    <button onclick="window.location.href='main.html?home=true'">INICIO</button>
   </div>
 </body>
 </html>
