--- a/main.html
+++ b/main.html
@@ -174,6 +174,20 @@
         </div>
       </section>
 
+      <section id="contacto-section" class="hidden contacto-layout">
+        <div class="contacto-row">
+          <img src="images/Fernanda.png" alt="Contacto de Fernanda" class="contacto-img" />
+          <p class="contacto-text">
+            MAR GARIBAY<br>
+            Diseñadora Gráfica<br>
+            <br>
+            ✉ castellanosgmar@gmail.com<br>
+            ☎ 33 28 37 26 57<br>
+            IG @mcaste__
+          </p>
+        </div>
+      </section>
+
       
       <div class="font-modal hidden" id="fontModal">
         <div class="font-modal-content">
