--- a/main.html
+++ b/main.html
@@ -174,6 +174,29 @@
         </div>
       </section>
 
+      <section id="historia-section" class="hidden historia-layout">
+        <div class="historia-text">
+          <h2>Historia de las letras</h2>
+          <h3>Testigos del Tiempo</h3>
+          <p>
+            Las letras han sido testigos del paso del tiempo, adaptándose y transformándose
+            con cada civilización, tecnología y necesidad humana. Desde los primeros trazos
+            tallados en piedra por culturas ancestrales, hasta las elegantes curvas de la
+            caligrafía y las tipografías digitales que habitamos hoy, cada letra cuenta una historia.
+          </p>
+          <p>
+            Todo comenzó con la necesidad de dejar constancia. En Sumeria, los pictogramas
+            sobre tablillas de arcilla dieron paso al cuneiforme. En Egipto, los jeroglíficos
+            combinaban arte y lenguaje. Luego vino el alfabeto fenicio, más práctico, que inspiró
+            a griegos y romanos, y formó la base del alfabeto latino que usamos en gran parte del mundo.
+          </p>
+        </div>
+        <div class="historia-letters">
+          <span class="big-letter">H</span>
+          <span class="small-letter">t</span>
+        </div>
+      </section>
+
       <section id="contacto-section" class="hidden contacto-layout">
         <div class="contacto-row">
           <img src="images/Fernanda.png" alt="Contacto de Fernanda" class="contacto-img" />
